[tool.poetry]
name = "repl_python3_beta_SHEEP-BOT-V2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
pytz = "^2021.1"
randfacts = "^0.10.0"
pyjokes = "^0.6.0"
openai = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
